@@ -51,7 +51,7 @@ public class Cuda{
 
   public void cuInit(int flags) throws Throwable{
     if(hndCuInit == null){
-      MemorySegment func = cuda.lookup("cuInit").get();
+      MemorySegment func = cuda.find("cuInit").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_INT);
       hndCuInit = Linker.nativeLinker().downcallHandle(func, desc);
     }
@@ -64,14 +64,14 @@ public class Cuda{
 
   public int cuDeviceGet(int ordinal) throws Throwable{
     if(hndCuDeviceGet == null){
-      MemorySegment func = cuda.lookup("cuDeviceGet").get();
+      MemorySegment func = cuda.find("cuDeviceGet").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT);
       hndCuDeviceGet = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
+    try(var arena = Arena.openConfined()){
       // CUdevice is int
-      var cDevice = session.allocate(ValueLayout.JAVA_INT);
+      var cDevice = arena.allocate(ValueLayout.JAVA_INT);
       int result = (int)hndCuDeviceGet.invoke(cDevice, ordinal);
       if(result != 0){ // CUDA_SUCCESS is 0
         throw new RuntimeException("cuDeviceGet() returns " + Integer.toString(result));
@@ -82,67 +82,67 @@ public class Cuda{
 
   public long cuCtxCreate(int flags, int device) throws Throwable{
     if(hndCuCtxCreate == null){
-      MemorySegment func = cuda.lookup("cuCtxCreate").get();
+      MemorySegment func = cuda.find("cuCtxCreate").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT);
       hndCuCtxCreate = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
+    try(var arena = Arena.openConfined()){
       // CUcontext is pointer
-      var cCtx = session.allocate(ValueLayout.ADDRESS);
+      var cCtx = arena.allocate(ValueLayout.ADDRESS);
       int result = (int)hndCuCtxCreate.invoke(cCtx, flags, device);
       if(result != 0){ // CUDA_SUCCESS is 0
         throw new RuntimeException("cuCtxCreate() returns " + Integer.toString(result));
       }
-      return cCtx.get(ValueLayout.ADDRESS, 0).toRawLongValue();
+      return cCtx.get(ValueLayout.ADDRESS, 0).address();
     }
   }
 
   public long cuModuleLoadData(byte[] ptx) throws Throwable{
     if(hndCuModuleLoadData == null){
-      MemorySegment func = cuda.lookup("cuModuleLoadData").get();
+      MemorySegment func = cuda.find("cuModuleLoadData").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS);
       hndCuModuleLoadData = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
-      var module = session.allocate(ValueLayout.ADDRESS); // CUmodule is a pointer
-      var cPtx = session.allocateArray(ValueLayout.JAVA_BYTE, ptx);
+    try(var arena = Arena.openConfined()){
+      var module = arena.allocate(ValueLayout.ADDRESS); // CUmodule is a pointer
+      var cPtx = arena.allocateArray(ValueLayout.JAVA_BYTE, ptx);
       int result = (int)hndCuModuleLoadData.invoke(module, cPtx);
       if(result != 0){ // CUDA_SUCCESS is 0
         throw new RuntimeException("cuModuleLoadData() returns " + Integer.toString(result));
       }
-      return module.get(ValueLayout.ADDRESS, 0).toRawLongValue();
+      return module.get(ValueLayout.ADDRESS, 0).address();
     }
   }
 
   public long cuModuleGetFunction(long module, String name) throws Throwable{
     if(hndCuModuleGetFunction == null){
-      MemorySegment func = cuda.lookup("cuModuleGetFunction").get();
+      MemorySegment func = cuda.find("cuModuleGetFunction").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS);
       hndCuModuleGetFunction = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
-      var func = session.allocate(ValueLayout.ADDRESS); // CUfunction is a pointer;
-      var cName = session.allocateUtf8String(name);
+    try(var arena = Arena.openConfined()){
+      var func = arena.allocate(ValueLayout.ADDRESS); // CUfunction is a pointer;
+      var cName = arena.allocateUtf8String(name);
       int result = (int)hndCuModuleGetFunction.invoke(func, module, cName);
       if(result != 0){ // CUDA_SUCCESS is 0
         throw new RuntimeException("cuModuleGetFunction() returns " + Integer.toString(result));
       }
-      return func.get(ValueLayout.ADDRESS, 0).toRawLongValue();
+      return func.get(ValueLayout.ADDRESS, 0).address();
     }
   }
 
   public long cuMemAlloc(long size) throws Throwable{
     if(hndCuMemAlloc == null){
-      MemorySegment func = cuda.lookup("cuMemAlloc").get();
+      MemorySegment func = cuda.find("cuMemAlloc").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG);
       hndCuMemAlloc = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
-      var dptr = session.allocate(ValueLayout.JAVA_LONG); // CUdeviceptr is an unsigned long
+    try(var arena = Arena.openConfined()){
+      var dptr = arena.allocate(ValueLayout.JAVA_LONG); // CUdeviceptr is an unsigned long
       int result = (int)hndCuMemAlloc.invoke(dptr, size);
       if(result != 0){ // CUDA_SUCCESS is 0
         throw new RuntimeException("cuMemAlloc() returns " + Integer.toString(result));
@@ -154,7 +154,7 @@ public class Cuda{
   private MemorySegment convertToArgumentArray(SegmentAllocator allocator, Object[] args){
     var dargs = allocator.allocateArray(ValueLayout.ADDRESS, args.length);
     for(int i = 0; i < args.length; i++){
-      Addressable mem = switch(args[i]){
+      MemorySegment mem = switch(args[i]){
         case Byte v -> allocator.allocate(ValueLayout.JAVA_BYTE, v.byteValue());
         case Character v -> allocator.allocate(ValueLayout.JAVA_CHAR, v.charValue());
         case Double v -> allocator.allocate(ValueLayout.JAVA_DOUBLE, v.doubleValue());
@@ -162,17 +162,17 @@ public class Cuda{
         case Integer v -> allocator.allocate(ValueLayout.JAVA_INT, v.intValue());
         case Long v -> allocator.allocate(ValueLayout.JAVA_LONG, v.longValue());
         case Short v -> allocator.allocate(ValueLayout.JAVA_SHORT, v.shortValue());
-        case null -> MemoryAddress.NULL;
+        case null -> MemorySegment.NULL;
         default -> throw new IllegalArgumentException("Unsupported type for kernel argument");
       };
-      dargs.setAtIndex(ValueLayout.ADDRESS, i, mem.address());
+      dargs.setAtIndex(ValueLayout.ADDRESS, i, mem);
     }
     return dargs;
   }
 
   public void cuLaunchKernel(long func, int gridDimX, int gridDimY, int gridDimZ, int blockDimX, int blockDimY, int blockDimZ, int sharedMemBytes, long stream, Object[] kernelParams, Object[] extra) throws Throwable{ // CUstream is a pointer
     if(hndCuLaunchKernel == null){
-      MemorySegment fn = cuda.lookup("cuLaunchKernel").get();
+      MemorySegment fn = cuda.find("cuLaunchKernel").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, // result
                                                       ValueLayout.JAVA_LONG, // func
                                                       ValueLayout.JAVA_INT, // gridDimX
@@ -189,9 +189,9 @@ public class Cuda{
       hndCuLaunchKernel = Linker.nativeLinker().downcallHandle(fn, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
-      Addressable cKernelParams = kernelParams == null ? MemoryAddress.NULL : convertToArgumentArray(session, kernelParams);
-      Addressable cExtra = extra == null ? MemoryAddress.NULL : convertToArgumentArray(session, extra);
+    try(var arena = Arena.openConfined()){
+      MemorySegment cKernelParams = kernelParams == null ? MemorySegment.NULL : convertToArgumentArray(arena, kernelParams);
+      MemorySegment cExtra = extra == null ? MemorySegment.NULL : convertToArgumentArray(arena, extra);
       int result = (int)hndCuLaunchKernel.invoke(func, gridDimX, gridDimY, gridDimZ, blockDimX, blockDimY, blockDimZ, sharedMemBytes, stream, cKernelParams, cExtra);
       if(result != 0){ // CUDA_SUCCESS is 0
         throw new RuntimeException("cuLaunchKernel() returns " + Integer.toString(result));
@@ -201,12 +201,12 @@ public class Cuda{
 
   public Object cuMemcpyDtoH(Object target, long srcDevice, long byteCount) throws Throwable{
     if(hndCuMemcpyDtoH == null){
-      MemorySegment func = cuda.lookup("cuMemcpyDtoH").get();
+      MemorySegment func = cuda.find("cuMemcpyDtoH").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG);
       hndCuMemcpyDtoH = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
+    try(var arena = Arena.openConfined()){
       ValueLayout cType = switch(target){
         case byte[] v -> ValueLayout.JAVA_BYTE;
         case char[] v -> ValueLayout.JAVA_CHAR;
@@ -217,7 +217,7 @@ public class Cuda{
         case short[] v -> ValueLayout.JAVA_SHORT;
         default -> throw new IllegalArgumentException("Unsupported type for memcpy");
       };
-      MemorySegment cDstHost = session.allocateArray(cType, byteCount / cType.byteSize());
+      MemorySegment cDstHost = arena.allocateArray(cType, byteCount / cType.byteSize());
       int result = (int)hndCuMemcpyDtoH.invoke(cDstHost, srcDevice, byteCount);
       if(result != 0){ // CUDA_SUCCESS is 0
         throw new RuntimeException("cuMemcpyDtoH() returns " + Integer.toString(result));
@@ -238,7 +238,7 @@ public class Cuda{
 
   public void cuMemFree(long dptr) throws Throwable{
     if(hndCuMemFree == null){
-      MemorySegment func = cuda.lookup("cuMemFree").get();
+      MemorySegment func = cuda.find("cuMemFree").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG);
       hndCuMemFree = Linker.nativeLinker().downcallHandle(func, desc);
     }
@@ -251,7 +251,7 @@ public class Cuda{
 
   public void cuModuleUnload(long module) throws Throwable{
     if(hndCuModuleUnload == null){
-      MemorySegment func = cuda.lookup("cuModuleUnload").get();
+      MemorySegment func = cuda.find("cuModuleUnload").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG);
       hndCuModuleUnload = Linker.nativeLinker().downcallHandle(func, desc);
     }
@@ -264,7 +264,7 @@ public class Cuda{
 
   public void cuCtxDestroy(long ctx) throws Throwable{
     if(hndCuCtxDestroy == null){
-      MemorySegment func = cuda.lookup("cuCtxDestroy").get();
+      MemorySegment func = cuda.find("cuCtxDestroy").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG);
       hndCuCtxDestroy = Linker.nativeLinker().downcallHandle(func, desc);
     }
