@@ -33,24 +33,24 @@ public class CudaRuntimeCompiler{
 
   public long nvrtcCreateProgram(String src, String name, String[] headers, String[] includeNames) throws Throwable{
     if(hndNvrtcCreateProgram == null){
-      MemorySegment func = nvrtc.lookup("nvrtcCreateProgram").get();
+      MemorySegment func = nvrtc.find("nvrtcCreateProgram").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS);
       hndNvrtcCreateProgram = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
-      var prog = session.allocate(ValueLayout.ADDRESS); // nvrtcProgram is a pointer
-      var cSrc = session.allocateUtf8String(src);
-      Addressable cName = name == null ? MemoryAddress.NULL : session.allocateUtf8String(name);
+    try(var arena = Arena.openConfined()){
+      var prog = arena.allocate(ValueLayout.ADDRESS); // nvrtcProgram is a pointer
+      var cSrc = arena.allocateUtf8String(src);
+      MemorySegment cName = name == null ? MemorySegment.NULL : arena.allocateUtf8String(name);
       int numHeaders = headers == null ? 0 : headers.length;
-      Addressable cHeaders = MemoryAddress.NULL;
-      Addressable cIncludeNames = MemoryAddress.NULL;
+      MemorySegment cHeaders = MemorySegment.NULL;
+      MemorySegment cIncludeNames = MemorySegment.NULL;
       if(numHeaders > 0){
-        cHeaders = session.allocateArray(ValueLayout.ADDRESS, numHeaders);
-        cIncludeNames = session.allocateArray(ValueLayout.ADDRESS, numHeaders);
+        cHeaders = arena.allocateArray(ValueLayout.ADDRESS, numHeaders);
+        cIncludeNames = arena.allocateArray(ValueLayout.ADDRESS, numHeaders);
         for(int i = 0; i < numHeaders; i++){
-          ((MemorySegment)cHeaders).setAtIndex(ValueLayout.ADDRESS, i, session.allocateUtf8String(headers[i]));
-          ((MemorySegment)cIncludeNames).setAtIndex(ValueLayout.ADDRESS, i, session.allocateUtf8String(includeNames[i]));
+          ((MemorySegment)cHeaders).setAtIndex(ValueLayout.ADDRESS, i, arena.allocateUtf8String(headers[i]));
+          ((MemorySegment)cIncludeNames).setAtIndex(ValueLayout.ADDRESS, i, arena.allocateUtf8String(includeNames[i]));
         }
       }
 
@@ -59,22 +59,22 @@ public class CudaRuntimeCompiler{
         throw new RuntimeException("nvrtcCreateProgram() returns " + Integer.toString(result));
       }
 
-      return prog.get(ValueLayout.ADDRESS, 0).toRawLongValue();
+      return prog.get(ValueLayout.ADDRESS, 0).address();
     }
   }
 
   public void nvrtcCompileProgram(long prog, String[] options) throws Throwable{
     if(hndNvrtcCompileProgram == null){
-      MemorySegment func = nvrtc.lookup("nvrtcCompileProgram").get();
+      MemorySegment func = nvrtc.find("nvrtcCompileProgram").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.ADDRESS);
       hndNvrtcCompileProgram = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
     int numOptions = 0;
-    Addressable cOptions = MemoryAddress.NULL;
+    MemorySegment cOptions = MemorySegment.NULL;
     if((options != null) && (options.length > 0)){
       numOptions = options.length;
-      var allocator = SegmentAllocator.implicitAllocator();
+      var allocator = SegmentAllocator.nativeAllocator(SegmentScope.auto());
       cOptions = allocator.allocateArray(ValueLayout.ADDRESS, numOptions);
       for(int i = 0; i < numOptions; i++){
         ((MemorySegment)cOptions).setAtIndex(ValueLayout.ADDRESS, i, allocator.allocateUtf8String(options[i]));
@@ -89,13 +89,13 @@ public class CudaRuntimeCompiler{
 
   public long nvrtcGetPTXSize(long prog) throws Throwable{
     if(hndNvrtcGetPTXSize == null){
-      MemorySegment func = nvrtc.lookup("nvrtcGetPTXSize").get();
+      MemorySegment func = nvrtc.find("nvrtcGetPTXSize").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS);
       hndNvrtcGetPTXSize = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
-      var cSize = session.allocate(ValueLayout.JAVA_LONG); // size_t
+    try(var arena = Arena.openConfined()){
+      var cSize = arena.allocate(ValueLayout.JAVA_LONG); // size_t
       int result = (int)hndNvrtcGetPTXSize.invoke(prog, cSize);
       if(result != 0){ // NVRTC_SUCCESS is 0
         throw new RuntimeException("nvrtcGetPTXSize() returns " + Integer.toString(result));
@@ -106,14 +106,14 @@ public class CudaRuntimeCompiler{
 
   public byte[] nvrtcGetPTX(long prog) throws Throwable{
     if(hndNvrtcGetPTX == null){
-      MemorySegment func = nvrtc.lookup("nvrtcGetPTX").get();
+      MemorySegment func = nvrtc.find("nvrtcGetPTX").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS);
       hndNvrtcGetPTX = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
     long size = nvrtcGetPTXSize(prog);
-    try(var session = MemorySession.openConfined()){
-      var mem = session.allocate(size);
+    try(var arena = Arena.openConfined()){
+      var mem = arena.allocate(size);
       int result = (int)hndNvrtcGetPTX.invoke(prog, mem);
       if(result != 0){ // NVRTC_SUCCESS is 0
         throw new RuntimeException("nvrtcGetPTX() returns " + Integer.toString(result));
@@ -124,13 +124,13 @@ public class CudaRuntimeCompiler{
 
   public void nvrtcDestroyProgram(long prog) throws Throwable{
     if(hndNvrtcDestroyProgram == null){
-      MemorySegment func = nvrtc.lookup("nvrtcDestroyProgram").get();
+      MemorySegment func = nvrtc.find("nvrtcDestroyProgram").get();
       FunctionDescriptor desc = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS);
       hndNvrtcDestroyProgram = Linker.nativeLinker().downcallHandle(func, desc);
     }
 
-    try(var session = MemorySession.openConfined()){
-      var cProg = session.allocate(ValueLayout.JAVA_LONG, prog);
+    try(var arena = Arena.openConfined()){
+      var cProg = arena.allocate(ValueLayout.JAVA_LONG, prog);
       int result = (int)hndNvrtcDestroyProgram.invoke(cProg);
       if(result != 0){ // NVRTC_SUCCESS is 0
         throw new RuntimeException("nvrtcDestroyProgram() returns " + Integer.toString(result));
